# tdc-python-utils

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/tdc_python_utils/: azure_storage_downloader.py  colours.py  date_handler.py  duckdb_connector.py  paths.py  timer.py  url_downloader.py  zip_to_polars.py
