[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tdc-python-utils"
version = "0.0.2"

authors = [
  { name="The Data City", email="luke.strange@thedatacity.com" },
]

maintainers = [
  { name="Luke Strange", email="luke.strange@thedatacity.com" },
]

description = "A python utility package for The Data City"

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "azure-storage-blob>=12.27.1",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "polars>=1.36.1",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/TheDataCity/tdc-python-utils"
Issues = "https://github.com/TheDataCity/tdc-python-utils/issues"

[tool.hatch.build.targets.wheel]
sources = ["src"]
